# REngine-Atomic

./: .gitignore  .gitmodules  Build_Android.bat  Build_AtomicEditor.bat  Build_AtomicEditor.sh  CMakeLists.txt  CMake_Android.bat  CMake_IOS.sh  CMake_VS2015.bat  CMake_VS2017.bat  CMake_VS2022.bat  CMake_XCode.sh  README.md
Source/: CMakeLists.txt
Source/Atomic/: Atomic.h  CMakeLists.txt  DebugNew.h
Source/Atomic/BuildInfo/: AtomicGitSHA.cpp
Source/Atomic/Container/: Allocator.cpp  Hash.h  HashBase.h  LinkedList.h  Ptr.h  RefCounted.h  TypeTraits.h  Vector.h
Source/Atomic/Core/: Context.cpp  Main.h  Object.h  ProcessUtils.cpp  Profiler.cpp  Profiler.h  Variant.cpp  Variant.h
Source/Atomic/Engine/: Engine.cpp  EngineDefs.h
Source/Atomic/Graphics/: Batch.cpp  Batch.h  Camera.cpp  Camera.h  ConstantBuffer.cpp  ConstantBuffer.h  DrawCommand.cpp  DrawCommand.h  DrawCommandQueue.cpp  DrawCommandQueue.h  GPUObject.cpp  GPUObject.h  Graphics.cpp  Graphics.h  GraphicsDefs.h  GraphicsEvents.h  GraphicsImpl.h  Light.cpp  Light.h  RenderPath.cpp  RenderSurface.h  RenderTexture.cpp  Renderer.cpp  Renderer.h  ShaderPrecache.cpp  ShaderProgram.h  ShaderVariation.h  Technique.cpp  Technique.h  Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h  Texture2DArray.cpp  Texture3D.cpp  TextureCube.cpp  TextureCube.h  VertexBuffer.cpp  VertexBuffer.h  VertexDeclaration.h  (+2 more)
Source/Atomic/IO/: FileSystem.cpp  Log.cpp  Log.h  PackageFile.cpp
Source/Atomic/IPC/: IPCUnix.cpp
Source/Atomic/Input/: Input.cpp  Input.h
Source/Atomic/Network/: Network.cpp  Network.h
Source/Atomic/RHI/: ConstantBufferImpl.cpp  DiligentUtils.cpp  DiligentUtils.h  DriverInstance.cpp  DriverInstance.h  GraphicsImpl.cpp  GraphicsState.cpp  GraphicsState.h  IndexBufferImpl.cpp  PipelineStateBuilder.cpp  PipelineStateBuilder.h  RHITypes.h  RenderCommand.cpp  RenderCommand.h  RenderSurfaceImpl.cpp  ShaderCompiler.cpp  ShaderCompiler.h  ShaderProgram.cpp  ShaderProgram.h  ShaderVariationImpl.cpp  SwapChain.cpp  SwapChain.h  Texture2DArrayImpl.cpp  Texture2DImpl.cpp  Texture3DImpl.cpp  TextureCubeImpl.cpp  TextureImpl.cpp  TextureManager.cpp  TextureManager.h  VertexBufferImpl.cpp  VertexDeclaration.cpp  VertexDeclaration.h
Source/Atomic/UI/: UI.cpp  UIBatch.cpp  UIBatch.h  UISceneView.cpp  UIView.cpp  UIView.h  UIWidget.cpp  UIWidget.h
Source/AtomicApp/: AppBase.cpp  AppBase.h  CMakeLists.txt  IPCClientApp.cpp  IPCClientApp.h  IPCServerApp.cpp
Source/AtomicApp/Player/: IPCPlayerApp.cpp  IPCPlayerApp.h  PlayerApp.cpp
Source/AtomicEditor/: CMakeLists.txt
Source/AtomicEditor/Application/: AEEditorApp.cpp
Source/AtomicEditor/EditorMode/: AEEditorNETService.cpp
Source/AtomicJS/: CMakeLists.txt
Source/AtomicJS/Javascript/: JSAPI.cpp  JSAtomic.cpp  JSAtomic3D.cpp  JSComponentFile.h  JSFileSystem.cpp  JSIO.cpp  JSInput.cpp  JSRequire.cpp  JSSceneSerializable.cpp  JSUI.cpp  JSUI.h  JSUIAPI.cpp  Javascript.cpp
Source/AtomicNET/NETNative/: CMakeLists.txt  NETAtomicPlayer.cpp  NETCInterop.cpp  NETCore.h
Source/AtomicNET/NETScript/: CMakeLists.txt  CSComponent.cpp  NETScriptObject.h
Source/AtomicPlayer/: CMakeLists.txt  Player.cpp
Source/AtomicPlayer/Application/: AtomicPlayer.cpp  AtomicPlayer.h  CMakeLists.txt
Source/AtomicPlayerJS/: AtomicPlayerJS.cpp  CMakeLists.txt
Source/AtomicTool/: AtomicTool.cpp  CMakeLists.txt
Source/AtomicWebView/: CMakeLists.txt  UIWebView.cpp  WebBrowserHost.cpp  WebBrowserHost.h  WebClient.cpp  WebKeyboardLinux.cpp  WebKeyboardMac.cpp  WebMessageHandler.cpp  WebRenderHandler.cpp  WebRenderHandler.h  WebSchemeHandler.cpp  WebSchemeHandler.h  WebTexture2D.cpp  WebViewJS.cpp
Source/AtomicWebView/Internal/: WebApp.cpp  WebAppBrowser.cpp  WebAppBrowser.h  WebAppRenderer.cpp  WebAppRenderer.h  WebClientKeyboardHandler.cpp  WebClientKeyboardHandler.h  WebClientLoadHandler.cpp  WebClientLoadHandler.h  WebClientRequestHandler.cpp  WebInternalStorage.h  WebMain.cpp  WebUtils.cpp  WebUtils.h
Source/Bindings/: CMakeLists.txt
Source/Bindings/JavaScript/: Bookkeeper.cpp  Bookkeeper.h  Export.cpp  Export.h  Utils.cpp  Utils.h
Source/EngineApp/: AppBase.cpp  CMakeLists.txt  IPCClientApp.cpp  IPCServerApp.cpp  IPCServerApp.h
Source/EngineApp/Player/: IPCPlayerApp.cpp  IPCPlayerAppEvents.h  PlayerApp.cpp
Source/EngineCore/: CMakeLists.txt  DebugNew.h  EngineCore.h  Index.h  LibraryInfo.cpp  LibraryInfo.h  Revision.cpp
Source/EngineCore/2D/: AnimatedSprite2D.cpp  AnimatedSprite2D.h  AnimationSet2D.cpp  AnimationSet2D.h  Atomic2D.cpp  Atomic2D.h  CollisionBox2D.cpp  CollisionBox2D.h  CollisionChain2D.cpp  CollisionChain2D.h  CollisionCircle2D.cpp  CollisionCircle2D.h  CollisionEdge2D.cpp  CollisionEdge2D.h  CollisionPolygon2D.cpp  CollisionPolygon2D.h  CollisionShape2D.cpp  Constraint2D.cpp  ConstraintDistance2D.cpp  ConstraintDistance2D.h  ConstraintFriction2D.cpp  ConstraintFriction2D.h  ConstraintGear2D.cpp  ConstraintGear2D.h  ConstraintMotor2D.cpp  ConstraintMotor2D.h  ConstraintMouse2D.cpp  ConstraintMouse2D.h  ConstraintPrismatic2D.cpp  ConstraintPrismatic2D.h  ConstraintPulley2D.cpp  ConstraintPulley2D.h  ConstraintRevolute2D.cpp  ConstraintRevolute2D.h  ConstraintRope2D.cpp  ConstraintRope2D.h  ConstraintWeld2D.cpp  (+32 more)
Source/EngineCoreJS/: CMakeLists.txt
Source/EngineEditor/: CMakeLists.txt
Source/EnginePlayer/: CMakeLists.txt  Player.h  PlayerEvents.h
Source/EnginePlayerJS/: AtomicPlayerJS.cpp  CMakeLists.txt
Source/EngineTool/: AtomicTool.cpp  AtomicTool.h  CMakeLists.txt
Source/EngineWebView/: CMakeLists.txt  UIWebView.h  WebBrowserHost.cpp  WebBrowserHost.h  WebClient.h  WebKeyboard.h  WebKeyboardLinux.cpp  WebKeyboardMac.cpp  WebKeyboardWindows.cpp  WebMessageHandler.cpp  WebMessageHandler.h  WebSchemeHandler.cpp  WebString.h  WebTexture2D.cpp  WebTexture2D.h  WebViewEvents.h  WebViewJS.cpp
Source/Plugins/: CMakeLists.txt
Source/ToolCore/: CMakeLists.txt  ToolEnvironment.cpp  ToolEnvironment.h  ToolEvents.h  ToolPrefs.cpp  ToolPrefs.h  ToolSystem.cpp  ToolSystem.h
Source/ToolCoreJS/: CMakeLists.txt  ToolCoreJS.cpp
Source/Tools/: CMakeLists.txt
(+970 files in other folders)
