include(EngineVsGroupNames)

add_subdirectory(ThirdParty)
add_subdirectory(EngineCore)

if (ENGINE_JAVASCRIPT)
    add_subdirectory(EnginePlayer)
    add_subdirectory(AtomicJS)
    add_subdirectory(AtomicPlayerJS)
endif ()

if (ENGINE_WEBVIEW)
    add_subdirectory(AtomicWebView)
endif ()

if (ENGINE_JAVASCRIPT OR ENGINE_DOTNET)
    add_subdirectory(EngineApp)
    if (ENGINE_DOTNET)
        add_subdirectory(AtomicNET)
    endif()
endif ()

if (ENGINE_DESKTOP)
    add_subdirectory(AtomicTool)
    add_subdirectory(Tools)
    add_subdirectory(ToolCore)
    if (ENGINE_JAVASCRIPT)
        add_subdirectory(ToolCoreJS)
    endif ()
    if (ENGINE_WEBVIEW AND ENGINE_EDITOR)
        add_subdirectory(EngineEditor)
    endif ()
endif ()

include(EngineDocList)
