file (GLOB_RECURSE SOURCE_FILES *.cpp *.h)

add_library(AtomicApp ${SOURCE_FILES})
target_link_libraries(AtomicApp ${ENGINE_CORE_LIB_TARGET})
if (ENGINE_DESKTOP)
    if(ENGINE_JAVASCRIPT OR ENGINE_DOTNET)
        add_dependencies(AtomicApp AtomicToolCheckScripts)
    endif()
endif ()
if(ENGINE_JAVASCRIPT)
    target_link_libraries(AtomicApp AtomicJS AtomicPlayerJS)
endif()
GroupSources("Player")
